--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="José Antonio Torres Osorio">  
+    <meta name="description" content="Filmografía de Cantinflas">
+    <meta name="keywords" content="Cantinflas, filmografía, películas">
+    
     <title>Filmografía de Cantinflas</title>
     <link rel="stylesheet" href="styles.css">
     <style>
